refactor(table):将 TableFieldInfo 重命名为 TableColumnInfo